--- a/main.html
+++ b/main.html
@@ -1,33 +1,72 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
+
+
 <head>
+
     <meta charset="UTF-8">
+
     <title>Nostrum Website</title>
+
     <link rel="stylesheet" type="text/css" href="css/custom.css">
+
 </head>
+
 <style>
+
     @media only screen and (min-width: 500px){
 
+
+
     }
+
 </style>
+
 <body>
+
 <div class="color">
+
     <div style="clear:both;"></div>
+
     <div id="icons">
+
         <section id="content">
+
             <img src="images/wifi.png" width="75" height="75" alt="Thumb!" />
+
             <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit</p>
+
         </section>
+
         <section id="connect">
+
             <img src="images/connect.png" width="75" height="75" alt="Thumb!" />
+
             <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit</p>
+
         </section>
+
         <section id="message">
+
             <img src="images/message.png" width="75" height="75" alt="Thumb!" />
+
             <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit</p>
+
         </section>
+
     </div>
+    <div id="iphone7">
+        <img src="images/iphone7.png" width="270" height="215">
+        <header id="header1">At vero eos et accusamus et iusto odio</header>
+        <p id="p1">Nam libero tempore, cum soluta nobis est eligendi optio
+            nihil impedt quo minus id quod maxime placeat facere</p>
+        <a href="#" class="myButton">Vel illum qui</a>
+    </div>
+
 </div>
+
 </body>
+
 </html>
