--- a/index-bottom.html
+++ b/index-bottom.html
@@ -109,16 +109,18 @@
     }
     #header1{
         float: right;
-        margin-right: 240px;
+        margin-left: 285px;
         font-size: 40px;
-        margin-top: 10px;
+        margin-top: -210px;
+
+
     }
     #p1{
         float: right;
         width: 666px;
-        margin-right: 200px;
-        font-size: 29px;
-        margin-top: 3px;
+        margin-right: 208px;
+        font-size: 27px;
+        margin-top: 1px;
     }
     .myButton {
         background-color:#44c767;
@@ -135,8 +137,8 @@
         text-decoration:none;
 
         float: right;
-        margin-right: 670px;
-        margin-top: -20px;
+        margin-right: 681px;
+        margin-top: -80px;
         font-weight: bold;
     }
     .myButton:hover {
@@ -161,20 +163,23 @@ body {
 }
 .bottomTitle {
 	font-size: 30px;
+    width: 400px;
+    display: inline-block;
+
 }
 .centerDiv { 
-	width: 70%; 
-	height:800px; 
+	width: 70%;
+	height:800px;
 	margin: 0 auto;
 	background-color: #f1fcff;
 	padding: 10px;
 	}
 .container {
     width: 275px;
-   margin-top: 15px;
-   float: left;
-   margin-left: 25px;
-   font-size: 18px;
+    margin-top: 15px;
+    float: left;
+    margin-left: 25px;
+    font-size: 18px;
 }
 .icon1 {
     height: 90px;
@@ -221,6 +226,7 @@ body {
 }
 #phoneImage {
     height: 250px;
+
 
 }
 .botSec2 {
@@ -346,9 +352,9 @@ ul.selection {
     </div>
     <div id="iphone7">
         <img src="images/iphone7.png" width="270" height="215">
-        <header id="header1">At vero eos et accusamus et iusto odio</header>
+        <header id="header1">At vero eos et accusamus et iusto odio
         <p id="p1">Nam libero tempore, cum soluta nobis est eligendi optio
-            nihil impedt quo minus id quod maxime placeat facere</p>
+            nihil impedt quo minus id quod maxime placeat facere</p></header>
         <a href="#" class="myButton">Vel illum qui</a>
     </div>
 	<body> 
